# TerAgent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  agent.local.toml  agent.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: EVALUATION_FOUR_MODELS.md  EVALUATION_GLM5.md  EVALUATION_THREE_MODELS.md  deployment_guide_ascend.md  glm_52_stability_report.md  index.md
docs/en/: adaptation_guide.md  api-reference.md  architecture.md  configuration.md  contributing.md  getting-started.md  glm_52_guide.md  index.md  long_horizon_guide.md  multimodal_guide.md  security.md  self-rl.md  streaming.md  three_model_adaptation_guide.md
docs/zh/: adaptation_guide.md  api-reference.md  architecture.md  configuration.md  contributing.md  getting-started.md  glm_52_guide.md  index.md  long_horizon_guide.md  multimodal_guide.md  security.md  self-rl.md  streaming.md
examples/: agent.local.toml  agent.toml  quickstart.py
examples/full_agent/: __init__.py  __main__.py  checklist_generator.py  design_generator.py  plan_generator.py  reviewer.py
examples/multi_model/: __init__.py  __main__.py
examples/simple_chat/: __init__.py  __main__.py
teragent/: __init__.py  agent_loop.py  event_bus.py
teragent/benchmark/: __init__.py  benchmark.py
teragent/config/: __init__.py  agent_config.py  agent_loop_config.py  api_key_security.py  circuit_breaker_config.py  context_management_config.py  coordination_config.py  driver_config.py  execution_pipeline_config.py  file_safety_config.py  hooks_config.py  loader.py  mcp_config.py  model_fallback_config.py  orchestration_config.py  permission_config.py  recovery_config.py  session_config.py  (+3 more)
tests/: __init__.py  conftest.py  test_ai_permission_classifier.py  test_anthropic_adapter.py  test_audit.py  test_auto_compact.py  test_budget.py  test_bug_fixes.py  test_builtin_hooks.py  test_checklist.py  test_circuit_breaker.py  test_code_indexer.py  test_compilers.py  test_config_loader.py  test_confirmation.py  test_context_window.py  test_core_types.py  test_desktop_tool.py  test_event_bus.py  test_extractor.py  test_file_state.py  test_file_writer.py  test_firecracker_sandbox.py  test_glm52_thinking.py  test_glm5v_coordinator.py  test_glm_native.py  test_hooks_manager.py  test_intent_classifier.py  test_live_api.py  test_long_horizon.py  test_message_bus.py  test_microcompactor.py  test_minimax_native.py  test_minimax_native_v2.py  test_openai_adapter.py  test_orchestrator.py  test_p8_3_mixed_mode.py  test_p8_3_performance.py  test_permission.py  test_phase2.py  (+18 more)
(+145 files in other folders)
